# StartGGElo

./: .gitignore  Cargo.toml  DETAILS.md  INSTALL.md  README.md  build.rs  flake.nix
cli/: Cargo.toml  build.rs
cli/src/: datasets.rs  main.rs  queries.rs
cli/src/queries/: player_info.rs  search_games.rs  tournament_sets.rs
schema/: Cargo.toml  build.rs  startgg.graphql
schema/src/: lib.rs  startgg.graphql
scheme/: Cargo.toml
src/: database.rs  datasets.rs  main.rs  queries.rs  state.rs  sync.rs  util.rs
src/queries/: event_sets.rs  player_info.rs  scalars.rs  search_games.rs  tournament_events.rs  tournament_sets.rs
