[workspace]

[package]
name = "startrnr"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "startrnr"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.4", features = ["derive"] }
time-format = "1.1"

# GraphQL schema
schema.path = "schema"

# API access
cynic = { version = "3.2", features = ["http-reqwest-blocking"] }
reqwest = "0.11"
serde = "1.0"

# Local file manipulation
dirs = "5.0"
sqlite = "0.31"

[build-dependencies]
cynic-codegen = "3.2"
