[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ggelo"
path = "src/main.rs"

[dependencies]
schema.path = "../schema"
cynic = { version = "3.2", features = ["http-surf"] }
surf = "2"
dirs = "5.0"
futures = "0.3"
serde = "1.0"
sqlite = "0.31"

[build-dependencies]
cynic-codegen = "3.2"
